Opened 15 years ago
Closed 15 years ago
#4757 closed bug (fixed)
Dragging files into a folder can crash Tracker
Reported by: | olaf | Owned by: | aldeck |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Tracker | Version: | R1/alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
I've had this bug happen to me twice now. I was attempting to drag an image file into a folder in the same window and Tracker crashed. I hover over the folder too long and the directory hierarchy submenu comes up, but I just drop it into the folder -- and then Tracker crashes. After I restart Haiku to get Tracker back up, because I don't know how to manually, the file was copied -- even though Tracker crashed.
This is in the R1A1 build.
Change History (8)
comment:1 by , 15 years ago
comment:2 by , 15 years ago
GNU gdb 6.3 Copyright 2004 Free Software Foundation, Inc. GDB is free software, covered by the GNU General Public License, and you are welcome to change it and/or distribute copies of it under certain conditions. Type "show copying" to see the conditions. There is absolutely no warranty for GDB. Type "show warranty" for details. This GDB was configured as "i586-pc-haiku"...(no debugging symbols found)
[tcsetpgrp failed in terminal_inferior: Invalid Argument] Thread 752 caused an exception: Segment violation Reading symbols from /boot/system/runtime_loader...done. Loaded symbols for /boot/system/runtime_loader Reading symbols from /boot/system/lib/libbe.so...done. Loaded symbols for /boot/system/lib/libbe.so Reading symbols from /boot/system/lib/libtracker.so...done. Loaded symbols for /boot/system/lib/libtracker.so Reading symbols from /boot/system/lib/libroot.so...done. Loaded symbols for /boot/system/lib/libroot.so Reading symbols from /boot/system/lib/libstdc++.hrev4.so...done. Loaded symbols for /boot/system/lib/libstdc++.hrev4.so Reading symbols from /boot/system/lib/libtranslation.so...done. Loaded symbols for /boot/system/lib/libtranslation.so Reading symbols from /boot/system/lib/libtextencoding.so...done. Loaded symbols for /boot/system/lib/libtextencoding.so Reading symbols from /boot/system/add-ons/Translators/BMPTranslator...done. Loaded symbols for /boot/system/add-ons/Translators/BMPTranslator Reading symbols from /boot/system/add-ons/Translators/EXRTranslator...done. Loaded symbols for /boot/system/add-ons/Translators/EXRTranslator Reading symbols from /boot/system/lib/libilmimf.so...done. Loaded symbols for /boot/system/lib/libilmimf.so Reading symbols from /boot/system/lib/libz.so...done. Loaded symbols for /boot/system/lib/libz.so Reading symbols from /boot/system/add-ons/Translators/GIFTranslator...done. Loaded symbols for /boot/system/add-ons/Translators/GIFTranslator Reading symbols from /boot/system/add-ons/Translators/JPEG2000Translator...done. Loaded symbols for /boot/system/add-ons/Translators/JPEG2000Translator Reading symbols from /boot/system/add-ons/Translators/JPEGTranslator...done. Loaded symbols for /boot/system/add-ons/Translators/JPEGTranslator Reading symbols from /boot/system/add-ons/Translators/PCXTranslator...done. Loaded symbols for /boot/system/add-ons/Translators/PCXTranslator Reading symbols from /boot/system/add-ons/Translators/PNGTranslator...done. Loaded symbols for /boot/system/add-ons/Translators/PNGTranslator Reading symbols from /boot/system/add-ons/Translators/PPMTranslator...done. Loaded symbols for /boot/system/add-ons/Translators/PPMTranslator Reading symbols from /boot/system/add-ons/Translators/RAWTranslator...done. Loaded symbols for /boot/system/add-ons/Translators/RAWTranslator Reading symbols from /boot/system/add-ons/Translators/RTF-Translator...done. Loaded symbols for /boot/system/add-ons/Translators/RTF-Translator Reading symbols from /boot/system/add-ons/Translators/SGITranslator...done. Loaded symbols for /boot/system/add-ons/Translators/SGITranslator Reading symbols from /boot/system/add-ons/Translators/STXTTranslator...done. Loaded symbols for /boot/system/add-ons/Translators/STXTTranslator Reading symbols from /boot/system/add-ons/Translators/TGATranslator...done. Loaded symbols for /boot/system/add-ons/Translators/TGATranslator Reading symbols from /boot/system/add-ons/Translators/TIFFTranslator...done. Loaded symbols for /boot/system/add-ons/Translators/TIFFTranslator Reading symbols from /boot/system/add-ons/Translators/WonderBrushTranslator...done. Loaded symbols for /boot/system/add-ons/Translators/WonderBrushTranslator [tcsetpgrp failed in terminal_inferior: Invalid Argument] [Switching to team /boot/system/Tracker (105) thread w>home (752)] 0x005b553d in CheckDevicesEqual () from /boot/system/lib/libtracker.so (gdb) bt #0 0x005b553d in CheckDevicesEqual () from /boot/system/lib/libtracker.so #1 0x005b5ebc in BPrivate::BPoseView::MoveSelectionInto ()
from /boot/system/lib/libtracker.so
#2 0x005b4be8 in BPrivate::BPoseView::HandleDropCommon ()
from /boot/system/lib/libtracker.so
#3 0x005b350a in BPrivate::BPoseView::HandleMessageDropped ()
from /boot/system/lib/libtracker.so
#4 0x005ac9a4 in BPrivate::BPoseView::MessageReceived ()
from /boot/system/lib/libtracker.so
#5 0x002bfdf7 in BLooper::DispatchMessage () from /boot/system/lib/libbe.so #6 0x0037ff49 in BWindow::DispatchMessage () from /boot/system/lib/libbe.so #7 0x00383d9c in BWindow::task_looper () from /boot/system/lib/libbe.so #8 0x002c1353 in BLooper::_task0_ () from /boot/system/lib/libbe.so #9 0x006970c8 in thread_entry () from /boot/system/lib/libroot.so #10 0x7003ffec in ?? () (gdb)
comment:3 by , 15 years ago
I can confirm, it's still there in hrev33488. Thanks for the trace, olaf.
comment:4 by , 15 years ago
Can you please retry with hrev33598 or higher? I'm not sure if this is related.
comment:7 by , 15 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
Can reproduce, having a look.
comment:8 by , 15 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
fixed in hrev36516, sorry for the delay
Next time Tracker crashes, click the "Debug" button of the alert announcing the crash. This opens the debugger where you enter "bt" (for "backtrace") which returns useful info how it happened that you should include in your ticket.
You can restart a crashed Tracker (or Deskbar) by invoking the TeamMonitor with CTRL+ALT+DEL and its "Restart Desktop" button. If Tracker/Deskbar froze instead of a nice fullblown crash, you'll have to kill its entry in the TeamMonitor list first.