The "was dropped" flag is only used to specify whether or not DropPoint() returns valid data. Since the data is still valid in the copy, we don't need to clear the corresponding flag when copying a message. This is most probably the same behaviour as in R5 as Tracker seems to expect that in the case where a drop is done after a menu was displayed as in #4757. Thanks to aldeck for tracking that one down inside Tracker, should fix #4757.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33746 a95241bf-73f2-0310-859d-f6bbb57e9c96